--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="onepage, html5 template, portfolio template">
     <meta name="description" content="Lavina - Personal Portfolio Landing Page Template">
 	<!-- Title -->
-    <title>Lavina - Personal Portfolio Landing Page Template</title>
+    <title>Hannah - Personal Portfolio</title>
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="assets/img/favicon.ico">
     <!-- Google Fonts -->
@@ -30,7 +30,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll" href="index.html"><span class="color-text">La</span>vina</a>
+            <a class="navbar-brand js-scroll" href="index.html"><span class="color-text">Ha</span>nnah</a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
@@ -59,22 +59,27 @@
                     <div class="text-center home-content z-index position-relative">
 						<h3>Welcome To My Website</h3>
 						<h1 class="cd-headline clip">
-                            <span class="blc">I'm </span>
+                            <!-- <span class="blc">I'm </span> -->
                             <span class="cd-words-wrapper">
-                              <b class="is-visible">Angel Lavina</b>
-                              <b>Web Designer</b>
-                              <b>Photographer</b>
+                              <b class="is-visible">I'm Hannah Bethke</b>
+                              <b>Software Engineer</b>
+                              <b>Web Developer</b>
                             </span>
                         </h1>
 						<div class="social-media">
-							<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>  </a>
-							<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>  </a>
-							<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>  </a>
-							<a href="#"><i class="fa fa-behance" aria-hidden="true"></i>  </a>
-							<a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i>  </a>
+							<a href="https://www.linkedin.com/in/hannah-bethke/" target="_blank" rel="noreferrer noopener">
+                                <span><i class="fa fa-github"></i></span>
+                            </a>
+							<a href="https://github.com/hannahbethke" target="_blank" rel="noreferrer noopener">
+                                <span><i class="fa fa-linkedin" aria-hidden="true"></span></i>
+                            </a>
+							<a href="assets/Bethke_Resume_2022_online.pdf" target="_blank" rel="noreferrer noopener">
+                                <span><i class="fa fa-file"></i></span>
+                            </a>
 						</div>
-                        <a href="#work" class="button home-btn-1 js-scroll">View Work</a>
-                        <a href="#contact" class="button home-btn-2 js-scroll">Hire Me</a>
+                        <!-- TO-DO: fix bug, after click text disappears -->
+                        <a href="#project" class="button home-btn-1 js-scroll">View Work</a>
+                        <a href="#contact" class="button home-btn-2 js-scroll">Contact Me</a>
                     </div>
                 </div>
             </div>
