changes nav bar

--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"> <a class="nav-link js-scroll active" href="#home">Home</a></li>
                     <li class="nav-item"> <a class="nav-link js-scroll" href="#about">About</a></li>
-                    <li class="nav-item"> <a class="nav-link js-scroll" href="#service">Service</a></li>
                     <li class="nav-item"> <a class="nav-link js-scroll" href="#resume">Resume</a></li>
                     <li class="nav-item"> <a class="nav-link js-scroll" href="#project">Portfolio</a></li>
-                    <li class="nav-item"> <a class="nav-link js-scroll" href="#blog">Blog</a></li>
                     <li class="nav-item"> <a class="nav-link js-scroll" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -123,7 +121,7 @@
     <!-- About Section End -->
 
 
-    <!-- Service Section Start -->
+    <!-- Possible future enhancement: Service Section -->
     <section id="service" class="service-area section-padding">
         <div class="container">
             <div class="row">
@@ -146,7 +144,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- Service Single Item -->
 							<div class="single-services-box">
 								<div class="single-services">
 									<div class="services-icon"> <i class="pe-7s-target"></i> </div>
@@ -156,7 +153,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- Service Single Item -->
 							<div class="single-services-box">
 								<div class="single-services">
 									<div class="services-icon"> <i class="pe-7s-graph1"></i> </div>
@@ -166,7 +162,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- Service Single Item -->
 							<div class="single-services-box">
 								<div class="single-services">
 									<div class="services-icon"> <i class="pe-7s-tools"></i> </div>
@@ -176,7 +171,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- Service Single Item -->
 							<div class="single-services-box">
 								<div class="single-services">
 									<div class="services-icon"> <i class="pe-7s-share"></i> </div>
@@ -186,7 +180,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- Service Single Item -->
 							<div class="single-services-box">
 								<div class="single-services">
 									<div class="services-icon"> <i class="pe-7s-edit"></i> </div>
