personalizes about page

--- a/index.html
+++ b/index.html
@@ -103,16 +103,21 @@
             <div class="row d-flex align-items-center">
 				<div class="col-lg-6 col-md-12 col-sm-12">
 					<div class="about-img-wrapper">
-						<img class="img-fluid" src="assets/img/about.jpg" alt="about image">
+                        <!-- TO-DO: adjust photo so height is only 460px? -->
+						<img class="img-fluid" src="assets/img/about_img.jpg" alt="about image">
 					</div>
 				</div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="about-content">
-                        <h3>I am <span class="color-text">Lavina</span></h3>
-						<h6>Web Developer & Photographer</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <a href="#0" class="after-btn js-scroll">Download my CV</a>
+                        <h3>Hello! I'm <span class="color-text">Hannah</span></h3>
+						<h6>Software Engineer & Web Developer</h6>
+                        <p>I'm a Full Stack Software Engineer and General Assembly graduate with a creative eye for design and a natural inclination for problem solving. I come from a family of engineers and have loved building things and solving mysteries since I was a young child. I am breaking into the industry after discovering an interest and talent for computer programming.</p>
+                        <p>I am a seasoned professional with six+ years of managerial/leadership experience. I hold a Bachelor of Science degree in physiology, have an extensive background in performance art, and am a retired Massage Therapist.</p>
+                        <div class="mt-3">
+                            <a href="assets/Bethke_Resume_2022_online.pdf" target="_blank" rel="noreferrer noopener">
+                                Download my CV
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
