--- a/index.html
+++ b/index.html
@@ -690,14 +690,18 @@
                 <div class="row">
                     <div class="col-md-12">
 						<div class="footer-social-media">
-							<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>  </a>
-							<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>  </a>
-							<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>  </a>
-							<a href="#"><i class="fa fa-behance" aria-hidden="true"></i>  </a>
-							<a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i>  </a>
+							<a href="https://www.linkedin.com/in/hannah-bethke/" target="_blank" rel="noreferrer noopener">
+                                <span><i class="fa fa-github"></i></span>
+                            </a>
+							<a href="https://github.com/hannahbethke" target="_blank" rel="noreferrer noopener">
+                                <span><i class="fa fa-linkedin" aria-hidden="true"></span></i>
+                            </a>
+							<a href="assets/Bethke_Resume_2022_online.pdf" target="_blank" rel="noreferrer noopener">
+                                <span><i class="fa fa-file"></i></span>
+                            </a>
 						</div>
-                        <p>Copyright &copy; 2020 - All Right Reserved.</p>
-                        <p>Designed by Cute Themes.</p>
+                        <p>Copyright &copy; 2022 - All Right Reserved.</p>
+                        <p>Designed by Cute Themes. Customized by Hannah Bethke</p>
                     </div>
                 </div>
             </div>
