--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     <div class="about-content">
                         <h3>Hello! I'm <span class="color-text">Hannah</span></h3>
 						<h6>Software Engineer & Web Developer</h6>
-                        <p>I'm a Full Stack Software Engineer and General Assembly graduate with a creative eye for design and a natural inclination for problem solving. I come from a family of engineers and have loved building things and solving mysteries since I was a young child. I am breaking into the industry after discovering an interest and talent for computer programming.</p>
-                        <p>I am a seasoned professional with six+ years of managerial/leadership experience. I hold a Bachelor of Science degree in physiology, have an extensive background in performance art, and am a retired Massage Therapist.</p>
+                        <p>Hello! My name is Hannah and I'm a Full Stack Software Engineer and General Assembly Alumni. I am a seasoned professional with over 20 years of experience in the workforce and have been in managerial/leadership positions for six+ years. I hold a Bachelor of Science in Physiology, am a licensed Massage Therapist, and also have an extensive background in performance art. </p>
+                        <p>I made a career change to Software Engineering after discovering an unknown interest and talent in the field. My goal is to deliver clear and concise code that performs well, meets accessibility standards, and produces a user friendly design with aesthetic appeal.</p>
                         <div class="mt-3">
                             <a href="assets/Bethke_Resume_2022_online.pdf" target="_blank" rel="noreferrer noopener">
                                 Download my CV
