remove unnecessary sections

--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
         </div>
     </section>
     <!-- About Section End -->
-
-
+    
     <!-- Possible future enhancement: Service Section -->
-    <section id="service" class="service-area section-padding">
+    <!-- <section id="service" class="service-area section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -199,7 +198,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Service Section End -->
 
 
@@ -372,7 +371,7 @@
 
 
     <!-- Project Section Start -->
-    <section id="project" class="project-area section-padding">
+    <!-- <section id="project" class="project-area section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -393,7 +392,6 @@
                     </div>
                 </div>
                 <div class="project-container">
-                    <!-- project-item -->
                     <div class="col-lg-4 col-md-6 project-grid-item all branding webdesign">
                         <a class="popup-img project-item " href="assets/img/projects/work-1.jpg"> <img src="assets/img/projects/work-1.jpg" alt="img">
                             <div class="project-img-overlay">
@@ -404,7 +402,6 @@
                             </div>
                         </a>
                     </div>
-                    <!-- project-item -->
                     <div class="col-lg-4 col-md-6 project-grid-item all photography">
                         <a class="popup-img project-item" href="assets/img/projects/work-2.jpg"> <img src="assets/img/projects/work-2.jpg" alt="img">
                             <div class="project-img-overlay">
@@ -415,7 +412,6 @@
                             </div>
                         </a>
                     </div>
-                    <!-- project-item -->
                     <div class="col-lg-4 col-md-6 project-grid-item all branding webdesign">
                         <a class="popup-img project-item " href="assets/img/projects/work-3.jpg"> <img src="assets/img/projects/work-3.jpg" alt="img">
                             <div class="project-img-overlay">
@@ -426,7 +422,6 @@
                             </div>
                         </a>
                     </div>
-                    <!-- project-item -->
                     <div class="col-lg-4 col-md-6 project-grid-item all branding webdesig photographyn">
                         <a class="popup-img project-item" href="assets/img/projects/work-4.jpg"> <img src="assets/img/projects/work-4.jpg" alt="img">
                             <div class="project-img-overlay">
@@ -437,7 +432,6 @@
                             </div>
                         </a>
                     </div>
-                    <!-- project-item -->
                     <div class="col-lg-4 col-md-6 project-grid-item all webdesign photography">
                         <a class="popup-img project-item" href="assets/img/projects/work-5.jpg"> <img src="assets/img/projects/work-5.jpg" alt="img">
                             <div class="project-img-overlay">
@@ -448,7 +442,6 @@
                             </div>
                         </a>
                     </div>
-                    <!-- project-item -->
                     <div class="col-lg-4 col-md-6 project-grid-item all webdesign photography">
                         <a class="popup-img project-item" href="assets/img/projects/work-6.jpg"> <img src="assets/img/projects/work-6.jpg" alt="img">
                             <div class="project-img-overlay">
@@ -460,7 +453,6 @@
                         </a>
                     </div>
                 </div>
-                <!-- project more button -->
                 <div class="col-md-12">
                     <div class="project-more-btn text-center">
                         <a href="#0" class="after-btn">Previous Project</a>
@@ -468,7 +460,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Project Section End -->
 
     <!-- Testimonials Section Start -->
