--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             </button>
             <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
                 <ul class="navbar-nav">
-                    <li class="nav-item"> <a class="nav-link js-scroll active" href="#home">Home</a></li>
                     <li class="nav-item"> <a class="nav-link js-scroll" href="#about">About</a></li>
                     <li class="nav-item"> <a class="nav-link js-scroll" href="#portfolio">Portfolio</a></li>
                     <li class="nav-item"> <a class="nav-link js-scroll" href="#resume">Resume</a></li>
@@ -77,7 +76,7 @@
                             </a>
 						</div>
                         <!-- TO-DO: fix bug, after click text disappears -->
-                        <a href="#project" class="button home-btn-1 js-scroll">View Work</a>
+                        <a href="#portfolio" class="button home-btn-1 js-scroll">View Work</a>
                         <a href="#contact" class="button home-btn-2 js-scroll">Contact Me</a>
                     </div>
                 </div>
@@ -342,25 +341,25 @@
 							<div class="timeline-item">
 								<div class="icon"></div>
 								<div class="box">
-									<h5>Full stack Web Developer </h5>
-									<small class="bg-base-color"> 2018 - 2020</small>
+									<h5>Full Stack Software Engineering Fellow</h5>
+									<small class="bg-base-color"> 2022 - 2023</small>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
 								</div>
 							</div>
 							<div class="timeline-item">
 								<div class="icon"></div>
 								<div class="box">
-									<h5>Back-End Developer</h5>
-									<small class="bg-base-color"> 2015 - 2018</small>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+									<h5>HR Manager</h5>
+									<small class="bg-base-color"> 2019 - 2022</small>
+									<p>Managed payroll, recruitment, hiring, onboarding, terminations, and employee relations for over 150 faculty, student, and research personnel for the IPHY department and BioFrontiers Institute.</p>
 								</div>
 							</div>
 							<div class="timeline-item">
 								<div class="icon"></div>
 								<div class="box ">
-									<h5>UI/UX Designer </h5>
-									<small class="bg-base-color"> 2010 - 2015</small>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+									<h5>Massage Therapist</h5>
+									<small class="bg-base-color"> 2013 - 2019</small>
+									<p>Worked with clients to solve problematic patterns of tension, discover underlying root causes of pain, and develop appropriate treatment plans to resolve the issues.</p>
 								</div>
 							</div>
 						</div>
@@ -370,25 +369,25 @@
 							<div class="timeline-item">
 								<div class="icon"></div>
 								<div class="box ">
-									<h5>Academic Degree</h5>
-									<small class="bg-base-color"> 2018 - 2020</small>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+									<h5>Software Engineering Certificate</h5>
+									<small class="bg-base-color"> 2022 - 2023</small>
+									<p>General Assembly, Denver, CO- Successfully completed 500+ hours of expert-led instruction in algorithms, fundamentals, and the industry's most in demand technologies.</p>
 								</div>
 							</div>
 							<div class="timeline-item">
 								<div class="icon"> </div>
 								<div class="box ">
-									<h5>Bachelor’s Degree</h5>
+									<h5>Bachelor of Science in Integrative Physiology </h5>
 									<small class="bg-base-color"> 2015 - 2018</small>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+									<p>University of Colorado, Boulder- Integrative Physiology degree integrates life-sceince disiplines of physiology, anatomy, biochemistry, mathematics, physics, and statistics.</p>
 								</div>
 							</div>
 							<div class="timeline-item">
 								<div class="icon"></div>
 								<div class="box">
-									<h5>Specialization Course </h5>
-									<small class="bg-base-color"> 2010 - 2015</small>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+									<h5>Massage Therapy Licensure</h5>
+									<small class="bg-base-color"> 2012 - 2013</small>
+									<p>Boulder College of Massage Therapy, CO- was recognized as a leading institution in massage therapy education. Their programs offered a combination of classic Western massage; bodywork in the Eastern tradition; and clinical massage specialization.</p>
 								</div>
 							</div>
 						</div>
